@@ -7,6 +7,8 @@ dpkg (1.10.11) unstable; urgency=low
   * Frank Lichtenheld <frank@lichtenheld.de>:
     Apply patch, to handle missing infodir.bak, and empty files.  Closes:
     #196361
+  * Change standard_startup and standard_shutdown into macros.  Closes:
+    #200351.
 
  -- Wichert Akkerman <debian@extern.wiggy.net>  UNRELEASED
 
