@@ -1,3 +1,8 @@
+Sat Sep 13 14:31:22 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * lib/startup.c, lib/Makefile.in, include/dpkg.h.in: Change
+    standard_startup and standard_shutdown into macros.
+
 Sat Sep 13 14:24:14 CDT 2003 Adam Heath <doogie@debian.org>
 
   * scripts/install-info.pl: Apply patch, to handle missing infodir.bak,
